# wasm-test

./: Cargo.toml  LICENSE_MIT
benches/: bench.rs
my-app/: main.js  package-lock.json  package.json  webpack.config.js
my-app/static/: index.html
src/: lib.rs
