[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["SkyGrel19 <skibav2002@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.64", features = ["console", "Document", "HtmlElement"] }
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
wasm-mt = "0.1.3"
wasm-bindgen-futures = "0.4.37"
serde_closure = "0.3.3"
serde = "1.0.183"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
# Tell `rustc` to optimize for small code size.
# opt-level = "s"
